--- a/2D Controller/HTML/CLASSES/SCRIPTING/CHARACTER-COMBAT/EVENTS/on-charge-attack-fully-charged.html
+++ b/2D Controller/HTML/CLASSES/SCRIPTING/CHARACTER-COMBAT/EVENTS/on-charge-attack-fully-charged.html
@@ -69,9 +69,9 @@ public class Example : <a class="redirect-link" href="https://docs.unity3d.com/S
 
     private void <a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/MonoBehaviour.Update.html">Update</a>()
     {
-        if (<a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/Input.GetKeyDown.html">Input.GetKeyDown</a>(<a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/KeyCode.html">KeyCode.X</a>))
+        if (<a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/Input.GetKey.html">Input.GetKey</a>(<a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/KeyCode.html">KeyCode.X</a>))
         {
-            characterCombat.<a class="redirect-link" href="../PUBLIC-METHODS/perform-charged-attack.html">PerformChargedAttack</a>(exampleAttack);
+            characterCombat.<a class="redirect-link" href="../PUBLIC-METHODS/perform-charge-attack.html">PerformChargeAttack</a>(exampleAttack);
         }
         else if (<a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/Input.GetKeyUp.html">Input.GetKeyUp</a>(<a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/KeyCode.html">KeyCode.X</a>))
         {
