--- a/2D Controller/HTML/CLASSES/SCRIPTING/CHARACTER-COMBAT/PUBLIC-METHODS/perform-charge-attack.html
+++ b/2D Controller/HTML/CLASSES/SCRIPTING/CHARACTER-COMBAT/PUBLIC-METHODS/perform-charge-attack.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PerformChargedAttack</title>
+    <title>PerformChargeAttack</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -20,14 +20,14 @@
     <div class="main-page-division">
         <h1><a class="redirect-link" href="../character-combat.html">CharacterCombat</a>.PerformChargedAttack</h1>
         <h2>Declaration</h2>
-        <p>public void <b>PerformChargedAttack</b>(<a class="redirect-link" href="../../ATTACK-SO/attack-so.html">AttackSO</a> <b>attackData</b>, <a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/Transform.html">Transform</a> <b>projectileSpawnPoint</b> = null);</p>
+        <p>public void <b>PerformChargeAttack</b>(<a class="redirect-link" href="../../ATTACK-SO/attack-so.html">AttackSO</a> <b>attackData</b>, <a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/Transform.html">Transform</a> <b>projectileSpawnPoint</b> = null);</p>
         <br>
         <div class="table-division">
             <span class="table-title">Parameters</span>
             <table>
                 <tr>
                     <td class="label"><b>attackData</b></td>
-                    <td class="description">The scriptable object (AttackSO) that holds the data of the attack.</td>
+                    <td class="description">The scriptable object (<a class="redirect-link" href="../../ATTACK-SO/attack-so.html">AttackSO) that holds the data of the attack.</td>
                 </tr>
                 <tr>
                     <td class="label"><b>projectileSpawnPoint</b></td>
