--- a/2D Controller/HTML/CLASSES/SCRIPTING/CHARACTER-COMBAT/PUBLIC-METHODS/perform-normal-attack.html
+++ b/2D Controller/HTML/CLASSES/SCRIPTING/CHARACTER-COMBAT/PUBLIC-METHODS/perform-normal-attack.html
@@ -27,11 +27,11 @@
             <table>
                 <tr>
                     <td class="label"><b>attackData</b></td>
-                    <td class="description">The scriptable object (AttackSO) that holds the data of the attack.</td>
+                    <td class="description">The scriptable object (<a class="redirect-link" href="../../ATTACK-SO/attack-so.html">AttackSO</a>) that holds the data of the attack.</td>
                 </tr>
                 <tr>
                     <td class="label"><b>isPartOfCombo</b></td>
-                    <td class="description">Indicates whether the provided AttackSO is part of a combo attack.</td>
+                    <td class="description">Indicates whether the provided <a class="redirect-link" href="../../ATTACK-SO/attack-so.html">AttackSO</a> is part of a combo attack.</td>
                 </tr>
                 <tr>
                     <td class="label"><b>projectileSpawnPoint</b></td>
