--- a/2D Controller/HTML/CLASSES/SCRIPTING/HUMANOID-CONTROLLER/PUBLIC-METHODS/ledge-climb.html
+++ b/2D Controller/HTML/CLASSES/SCRIPTING/HUMANOID-CONTROLLER/PUBLIC-METHODS/ledge-climb.html
@@ -80,7 +80,7 @@ public class Example : <a class="redirect-link" href="../humanoid-controller.htm
     {
         base.Update();
 
-        if (IsLedgeGrabbing && <a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/Input.GetKeyDown.html">Input.GetKeyDown</a>(<a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/KeyCode.html">KeyCode.Space</a>))
+        if (<a class="redirect-link" href="../PUBLIC-PROPERTIES/is-ledge-grabbing.html">IsLedgeGrabbing</a> && <a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/Input.GetKeyDown.html">Input.GetKeyDown</a>(<a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/KeyCode.html">KeyCode.Space</a>))
         {
             canLedgeClimb = true;
         }
@@ -88,7 +88,7 @@ public class Example : <a class="redirect-link" href="../humanoid-controller.htm
         <a class="redirect-link" href="ledge-grab.html">LedgeGrab</a>();
         <b>LedgeClimb</b>(canLedgeClimb);
 
-        if (!IsLedgeClimbing && canLedgeClimb)
+        if (!<a class="redirect-link" href="../PUBLIC-PROPERTIES/is-ledge-climbing.html">IsLedgeClimbing</a> && canLedgeClimb)
         {
             canLedgeClimb = false;
         }
