--- a/2D Controller/HTML/CLASSES/SCRIPTING/CHARACTER-COMBAT/PUBLIC-METHODS/try-release-charge-attack.html
+++ b/2D Controller/HTML/CLASSES/SCRIPTING/CHARACTER-COMBAT/PUBLIC-METHODS/try-release-charge-attack.html
@@ -34,7 +34,11 @@
         <br>
         <h2>Description</h2>
         <p>
-            Description goes here.
+            Releases the current charge attack.
+            <br><br>
+            In combination with the <a class="redirect-link" href="perform-charge-attack.html">PerformChargeAttack</a>, this function will initiate the specified attack, calculating the
+            damage based on the amount of charge accumulated. Furthermore, if the attack is configured to launch a projectile, the function will handle spawning it and it will also
+            determine the projectile's launch speed based on the charge level.
         </p>
         <br>
         <p>
