--- a/2D Controller/HTML/CLASSES/SCRIPTING/CHARACTER-COMBAT/PUBLIC-PROPERTIES/attack-combo-counter.html
+++ b/2D Controller/HTML/CLASSES/SCRIPTING/CHARACTER-COMBAT/PUBLIC-PROPERTIES/attack-combo-counter.html
@@ -33,9 +33,7 @@
         </p>
         <br>
         <p>
-            Here is how you can access the property.
-            <br>
-            For additional information on invoking the <a class="redirect-link" href="../PUBLIC-METHODS/perform-normal-attack.html">PerformNormalAttack</a> function during
+            Here is how you can access the property. For additional information on invoking the <a class="redirect-link" href="../PUBLIC-METHODS/perform-normal-attack.html">PerformNormalAttack</a> function during
             a combo attack, refer to the method's documentation. It contains detailed instructions on effectively utilizing this function within the context of a combo sequence.
         </p>
 <pre class="code-block">
