--- a/2D Controller/HTML/CLASSES/SCRIPTING/CHARACTER-COMBAT/PUBLIC-METHODS/perform-charge-attack.html
+++ b/2D Controller/HTML/CLASSES/SCRIPTING/CHARACTER-COMBAT/PUBLIC-METHODS/perform-charge-attack.html
@@ -18,7 +18,7 @@
     <iframe src="../../../../navigation-bar.html"></iframe>
 
     <div class="main-page-division">
-        <h1><a class="redirect-link" href="../character-combat.html">CharacterCombat</a>.PerformChargedAttack</h1>
+        <h1><a class="redirect-link" href="../character-combat.html">CharacterCombat</a>.PerformChargeAttack</h1>
         <h2>Declaration</h2>
         <p>public void <b>PerformChargeAttack</b>(<a class="redirect-link" href="../../ATTACK-SO/attack-so.html">AttackSO</a> <b>attackData</b>, <a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/Transform.html">Transform</a> <b>projectileSpawnPoint</b> = null);</p>
         <br>
@@ -27,7 +27,7 @@
             <table>
                 <tr>
                     <td class="label"><b>attackData</b></td>
-                    <td class="description">The scriptable object (<a class="redirect-link" href="../../ATTACK-SO/attack-so.html">AttackSO) that holds the data of the attack.</td>
+                    <td class="description">The scriptable object (<a class="redirect-link" href="../../ATTACK-SO/attack-so.html">AttackSO</a>) that holds the data of the attack.</td>
                 </tr>
                 <tr>
                     <td class="label"><b>projectileSpawnPoint</b></td>
@@ -38,19 +38,70 @@
         <br>
         <h2>Description</h2>
         <p>
-            Description goes here.
+            Starts charging the specified charge attack.
+            <br><br>
+            This function initiates the charging process for an attack, adhering to a predefined duration specified by the attack's configuration. If this set duration is surpassed,
+            the character is compelled to either cancel or release the attack. The amount of charge accumulated during the charging period is stored in seconds within the
+            <a class="redirect-link" href="../PUBLIC-PROPERTIES/charge-timer.html">ChargeTimer</a> property.
         </p>
         <br>
         <p>
-            Example paragraph goes here.
+            Here is an example of how you can call this function. A reference to an <a class="redirect-link" href="../../ATTACK-SO/attack-so.html">AttackSO</a> scriptable object is required.
         </p>
 
 <pre class="code-block">
 using UnityEngine;
 
+[<a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/RequireComponent.html">RequireComponent</a>(typeof(<a class="redirect-link" href="../character-combat.html">CharacterCombat</a>))]
 public class Example : <a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/MonoBehaviour.html">MonoBehaviour</a>
 {
-    // Code.
+    [<a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/SerializeField.html">SerializeField</a>] private <a class="redirect-link" href="../../ATTACK-SO/attack-so.html">AttackSO</a> exampleAttack;
+    
+    private <a class="redirect-link" href="../character-combat.html">CharacterCombat</a> characterCombat;
+
+    private void <a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/MonoBehaviour.Awake.html">Awake</a>()
+    {
+        characterCombat = <a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/GameObject.GetComponent.html">GetComponent</a>&lt;<a class="redirect-link" href="../character-combat.html">CharacterCombat</a>&gt;();
+    }
+
+    private void <a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/MonoBehaviour.Update.html">Update</a>()
+    {
+        if (<a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/Input.GetKey.html">Input.GetKey</a>(<a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/KeyCode.html">KeyCode.X</a>))
+        {
+            characterCombat.<b>PerformChargeAttack</b>(exampleAttack);
+        }
+    }
+}
+</pre>
+        <br><hr><br>
+                <p>
+                    In the given example, the function is employed to execute a chargeable attack that also includes the launching of a projectile. Additionally, a reference to a
+                    transform point is necessary for the attack to utilize it as a spawn point for the projectile.
+                </p>
+
+<pre class="code-block">
+using UnityEngine;
+
+[<a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/RequireComponent.html">RequireComponent</a>(typeof(<a class="redirect-link" href="../character-combat.html">CharacterCombat</a>))]
+public class Example : <a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/MonoBehaviour.html">MonoBehaviour</a>
+{
+    [<a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/SerializeField.html">SerializeField</a>] private <a class="redirect-link" href="../../ATTACK-SO/attack-so.html">AttackSO</a> exampleAttack;
+    [<a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/SerializeField.html">SerializeField</a>] private <a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/Transform.html">Transform</a> projectileSpawnPoint;
+    
+    private <a class="redirect-link" href="../character-combat.html">CharacterCombat</a> characterCombat;
+
+    private void <a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/MonoBehaviour.Awake.html">Awake</a>()
+    {
+        characterCombat = <a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/GameObject.GetComponent.html">GetComponent</a>&lt;<a class="redirect-link" href="../character-combat.html">CharacterCombat</a>&gt;();
+    }
+
+    private void <a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/MonoBehaviour.Update.html">Update</a>()
+    {
+        if (<a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/Input.GetKey.html">Input.GetKey</a>(<a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/KeyCode.html">KeyCode.X</a>))
+        {
+            characterCombat.<b>PerformChargeAttack</b>(exampleAttack, projectileSpawnPoint);
+        }
+    }
 }
 </pre>
 </div>
